# idmix

./: .gitattributes  .gitignore  PACKAGING.md  README.md  README_en.md  arithmetic.md  composer.json
.github/workflows/: publish-nuget.yml
c/: CMakeLists.txt  README.md  README_en.md
c/include/: codec.h  idmix.h  idx.h
c/src/: codec.c  idmix.c  idx.c
c/tests/: test_idmix.c
cpp/: CMakeLists.txt  README.md  README_en.md  vcpkg.json
cpp/include/idmix/: codec.hpp  idmix.hpp  idx.hpp
cpp/src/: codec.cpp  idmix.cpp  idx.cpp  xid_codec.cpp
cpp/tests/: test_idmix.cpp
csharp/: README.md  README_en.md
csharp/src/Vanni.Idmix/: Codec.cs  ICodec.cs  IdMix.cs  Idx.cs  Number.cs  RadixCodec.cs  TypedValue.cs  Vanni.Idmix.csproj  XidCodec.cs
csharp/tests/Vanni.Idmix.Tests/: CrossLanguageFixtures.cs  IdMixTests.cs  Vanni.Idmix.Tests.csproj
golang/: README.md  README_en.md  alphabet.go  benchmark_formats_test.go  benchmark_sqids_test.go  codec.go  cross_language_test.go  encode.go  extreme_values_test.go  go.mod  go.sum  idmix.go  idmix_test.go  idx_codec.go  idx_test.go  number.go  test_log_test.go  uint64_limits_test.go  vectors_test.go  xid_codec.go
java/: PUBLISHING.md  README.md  README_en.md  pom.xml  settings.xml.example
java/src/main/java/fan/vanni/idmix/: IdMix.java  RadixCodec.java  TypedValue.java  XidCodec.java
java/src/main/java/io/github/vannifan/idmix/: Codec.java  ICodec.java  IdMix.java  Idx.java  Number.java  RadixCodec.java  TypedValue.java  XidCodec.java
java/src/test/java/fan/vanni/idmix/: IdMixTest.java
java/src/test/java/io/github/vannifan/idmix/: CrossLanguageFixtures.java  IdMixTest.java
javascript/: README.md  README_en.md  package.json
javascript/src/: alphabet.js  codec.js  idmix.js  idx_codec.js  index.js  number.js  typed_value.js  xid_codec.js
javascript/test/: cross_language.js  test_idmix.js  test_idx.js
php/: README.md  README_en.md  composer.json  index.php
php/src/: Base64Codec.php  BaseEncoder.php  Bytes.php  Codec.php  CustomEncoder.php  DataObject.php  Encoder.php  Idmix.php  Idx.php  IntMath.php  Normalization.php  Number.php  RadixCodec.php  RandSlat.php  TypedValue.php  XidCodec.php
php/tests/: run_tests.php
python/: README.md  README_en.md  pyproject.toml
python/idmix/: __init__.py  alphabet.py  codec.py  idmix.py  idx_codec.py  number.py  typed_value.py  xid_codec.py
python/tests/: cross_language.py  test_idmix.py  test_idx.py
rust/: Cargo.toml
rust/lib/: Cargo.toml  README.md  README_en.md
rust/lib/src/: alphabet.rs  codec.rs  err.rs  error.rs  idmix.rs  idmixer.rs  idx_codec.rs  lib.rs  number.rs  typed_value.rs  xid_codec.rs
rust/lib/src/encoder/: custom.rs  mod.rs  traits.rs
rust/lib/tests/: benchmark_sqids.rs  extreme_cross_language.rs  idx_tests.rs
rust/src/: main.rs
testdata/: cross_language_vectors.json  extreme_constants.json
vb/src/Vanni.Idmix.Vb/: IdMix.vb  RadixCodec.vb  TypedValue.vb  Vanni.Idmix.Vb.vbproj  XidCodec.vb
