[package]
name = "idmix"
version = "0.1.0"
edition = "2021"
description = "mix the int id"
license = "Apache-2.0"
homepage = "http://vanni.fan"
repository = "https://github.com/Vanni-Fan/idmix/tree/main/rust/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
