[package]
name = "idmix"
version = "0.3.0"
edition = "2021"
description = "XID v1.1: encode typed integer sequences to short strings"
license = "Apache-2.0"
homepage = "https://github.com/Vanni-Fan/idmix"
repository = "https://github.com/Vanni-Fan/idmix"
documentation = "https://github.com/Vanni-Fan/idmix/blob/main/arithmetic.md"
readme = "../../README.md"
keywords = ["xid", "idmix", "encoding", "short-id"]
categories = ["encoding", "data-structures"]

[dependencies]
rand = "0.8.5"
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1"

[dev-dependencies]
sqids = "0.4.1"
