[package]
name = "idmix"
version = "0.4.0"
edition = "2021"
description = "IDX v1.2: encode typed integer and short string sequences to compact text"
license = "Apache-2.0"
homepage = "https://github.com/Vanni-Fan/idmix"
repository = "https://github.com/Vanni-Fan/idmix"
documentation = "https://github.com/Vanni-Fan/idmix/blob/main/arithmetic.md"
readme = "README.md"
keywords = ["idx", "idmix", "encoding", "short-id"]
categories = ["encoding", "data-structures"]

[dependencies]
rand = "0.8.5"
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1"
base64 = "0.22"

[dev-dependencies]
sqids = "0.4.1"
